# ai-agents

./: README.md
developer/: README.md  output.java  pyproject.toml
developer/src/developer/: crew.py  main.py
developer/src/developer/config/: agents.yaml  tasks.yaml
researcher/: README.md  pyproject.toml  report.md
researcher/src/researcher/: crew.py  main.py
