[project]
name = "developer"
version = "0.1.0"
description = "developer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
developer = "developer.main:run"
run_crew = "developer.main:run"
train = "developer.main:train"
replay = "developer.main:replay"
test = "developer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
